--- a/index.html
+++ b/index.html
@@ -11,6 +11,6 @@
   </head>
   <body class="bg-background-primary text-white">
     <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
+    <script type="module" src="src/main.tsx"></script>
   </body>
 </html>
